--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,11 +5,15 @@ homepage:
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
-  flutter: ">=1.17.0"
+  flutter: ">=3.0.0"
 
 dependencies:
+  carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.9
+  google_fonts: ^6.1.0
+  velocity_x: ^4.1.2
 
 dev_dependencies:
   flutter_test:
